# sciurus

./: .gitignore  CMakeLists.txt  Filelist  LICENSE  Makefile  README.md  test.py
.github/workflows/: ci.yml
ci/: if_ver-1.vim
config/: CMakeLists.txt  generate_pathdef.cmake
src/: CMakeLists.txt  Make_cyg_ming.mak  Make_mvc.mak  Makefile  configure  vim.h
src/libvterm/: CMakeLists.txt
src/po/: ru.cp1251.po
src/testdir/: Make_all.mak
